apps/langfuse/03-clickhouse.yaml
apiVersion: v1
kind: Service
metadata:
  name: langfuse-clickhouse
  namespace: langfuse
spec:
  ports:
    - name: http
      port: 8123
      targetPort: 8123
    - name: tcp
      port: 9000
      targetPort: 9000
  selector:
    app: langfuse-clickhouse
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: langfuse-clickhouse
  namespace: langfuse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: langfuse-clickhouse
  template:
    metadata:
      labels:
        app: langfuse-clickhouse
    spec:
      containers:
        - name: clickhouse
          image: clickhouse/clickhouse-server:25.10.2.65-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8123
            - containerPort: 9000
          volumeMounts:
            - mountPath: /var/lib/clickhouse
              name: clickhouse-data
      volumes:
        - name: clickhouse-data
          persistentVolumeClaim:
            claimName: clickhouse-pvc
